--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -27,7 +27,7 @@
                     <!-- 배합시작 버튼-->
                     <form th:action="@{/order/{id}/first-process(id=${order.id})}" method="post" style="display:inline;">
                         <input type="hidden" name="page" th:value="${ordersList.number}" />
-                        <button type="submit"
+                        <button th:id="'mixing-button-a' + ${order.id}" type="submit"
                                 class="btn btn-sm btn-refoam me-2"
                                 th:disabled="${order.orderState != '준비 중'}">배합시작</button>
                     </form>
@@ -102,7 +102,7 @@
                         <!-- 배합시작 버튼-->
                         <form th:action="@{/order/{id}/first-process(id=${order.id})}" method="post" style="display:inline;">
                             <input type="hidden" name="page" th:value="${ordersList.number}" />
-                            <button type="submit"
+                            <button  th:id="'mixing-button-b-' + ${order.id}" type="submit"
                                     class="btn btn-sm btn-refoam me-2"
                                     th:disabled="${order.orderState != '준비 중'}">배합시작</button>
                         </form>
@@ -192,10 +192,12 @@
 
     <script th:inline="javascript">
         let stompClient = null;
+        let reconnectDelay = 5000; // 5초 재연결 대기
 
         function connectWebSocket() {
             const socket = new SockJS('/ws');
             stompClient = Stomp.over(socket);
+            stompClient.reconnect_delay = reconnectDelay;
 
             stompClient.connect({}, function () {
                 console.log("웹소켓 연결됨");
@@ -255,6 +257,29 @@
                         }
                     });
                 });
+                stompClient.subscribe('/topic/mixing', function (message) {
+                    const data = JSON.parse(message.body);
+                    const orderId = data.orderId;
+                    const state = data.state;
+
+                    ["a", "b"].forEach(prefix => {
+                        const stateElem = document.querySelector(`#state-text-${prefix}-${orderId}`);
+                        const button = document.querySelector(`#mixing-button-${prefix}-${orderId}`);
+
+                        // 상태 텍스트 갱신
+                        if (stateElem) {
+                            stateElem.textContent = state;
+                        }
+
+                        // 버튼 비활성화
+                        if (button) {
+                            button.disabled = true;
+                        }
+                    });
+                });
+            }, function (error) {
+                console.error("웹소켓 연결 끊김, 재연결 시도중...", error);
+                setTimeout(connectWebSocket, reconnectDelay);
             });
         }
 
