핸폰 화면일때 테이블 크기 조정중ㅜㅜ

--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -64,7 +64,7 @@
             </tbody>
         </table>
     </div>
-    <div class="table-responsive table-md">
+    <div class="table-responsive table-md ">
         <table class="table table-hover table-striped">
             <colgroup>
                 <col style="width: 20%">   <!--md 사이즈 화면 비율로 조정 # -->
@@ -74,7 +74,7 @@
                 <col style="width: 25%">  <!-- 담당직원 -->
             </colgroup>
             <thead>
-            <tr>
+            <tr class="text-center">
                 <th class="ps-3 ">#</th>
                 <th>제품명</th>
                 <th>주문수량</th>
