--- a/src/main/resources/templates/material/materialList.html
+++ b/src/main/resources/templates/material/materialList.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
     <h2 class="my-4">재고 리스트</h2>
-    <div class="table-responsive table-lg">
+    <div class="table-responsive d-none d-lg-block">
         <table class="table table-hover table-striped">
             <thead>
             <tr>
@@ -21,14 +21,17 @@
                 <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}">2000-00-00 00:00</td>
                 <td th:text="${material.employee.username}">관리자</td>
                 <td class="text-center">
-                    <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-refoam btn-sm px-3 me-3" role="button">수 정</a>
-                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${material.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
+                    <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}"
+                       class="btn btn-refoam btn-sm px-3 me-3" role="button">수 정</a>
+                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${material.id}"
+                            class="btn btn-delete btn-sm px-3">삭 제
+                    </button>
                 </td>
             </tr>
             </tbody>
         </table>
     </div>
-    <div class="table-responsive table-md">
+    <div class="table-responsive d-block d-lg-none">
         <table class="table table-hover table-striped">
             <thead>
             <tr>
@@ -45,16 +48,24 @@
             <tbody>
             <th:block th:each="material, index : ${paging}">
                 <tr>
-                    <td th:text="${paging.number * paging.size + index.count}" class="ps-3" >1</td>
+                    <td th:text="${paging.number * paging.size + index.count}" class="ps-3">1</td>
                     <td th:text="${material.materialName}">EVA</td>
                     <td th:text="${material.materialQuantity}">50</td>
                 </tr>
                 <tr>
-                    <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}" class="ps-3">2000-00-00 00:00</td>
+                    <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}" class="ps-3">2000-00-00
+                        00:00
+                    </td>
                     <td>관리자</td>
                     <td>
-                        <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
-                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${material.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
+                        <div class="d-flex flex-nowrap gap-2">
+                            <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}"
+                               class="btn btn-sm btn-refoam w-50" role="button">수 정</a>
+                            <button type="button"
+                                    th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${material.id}"
+                                    class="btn btn-delete btn-sm w-50">삭 제
+                            </button>
+                        </div>
                     </td>
                 </tr>
             </th:block>
@@ -79,7 +90,8 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-refoam" data-bs-dismiss="modal">취소</button>
                         <button type="button" class="btn btn-delete"
-                                th:onclick="|location.href='@{/material/{id}/delete(id=${material.id})}'|">삭 제</button>
+                                th:onclick="|location.href='@{/material/{id}/delete(id=${material.id})}'|">삭 제
+                        </button>
                     </div>
                 </div>
             </div>
@@ -88,18 +100,23 @@
     <nav th:if="${!paging.isEmpty()}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${paging.first} ? 'disabled'">
-                <a class="page-link logo-font fw-normal" th:href="@{|?page=0|}"><i class="bi bi-chevron-double-left"></i>First</a>
+                <a class="page-link logo-font fw-normal" th:href="@{|?page=0|}"><i
+                        class="bi bi-chevron-double-left"></i>First</a>
             </li>
-            <li class="page-item"  th:classappend="${!paging.hasPrevious()}?'disabled'">
+            <li class="page-item" th:classappend="${!paging.hasPrevious()}?'disabled'">
                 <a class="page-link ps-0" th:href="@{|?page=${paging.number -1}|}"><i class="bi bi-chevron-left"></i>Previous</a>
             </li>
-            <li class="page-item" th:each="page:${#numbers.sequence(0,paging.totalPages -1)}" th:classappend="${page==paging.number}?'active'" th:if="${page >= paging.number -4 and page <= paging.number +4}">
+            <li class="page-item" th:each="page:${#numbers.sequence(0,paging.totalPages -1)}"
+                th:classappend="${page==paging.number}?'active'"
+                th:if="${page >= paging.number -4 and page <= paging.number +4}">
                 <a class="page-link" th:text="${page + 1}" th:href="@{|?page=${page}|}">1</a></li>
             <li class="page-item" th:classappend="${!paging.hasNext()}?'disabled'">
-                <a class="page-link pe-0" th:href="@{|?page=${paging.number +1}|}">Next <i class="bi bi-chevron-right"></i></a>
+                <a class="page-link pe-0" th:href="@{|?page=${paging.number +1}|}">Next <i
+                        class="bi bi-chevron-right"></i></a>
             </li>
             <li class="page-item" th:classappend="${paging.last} ? 'disabled'">
-                <a class="page-link " th:href="@{|?page=${paging.totalPages -1}|}">Last<i class="bi bi-chevron-double-right"></i></a>
+                <a class="page-link " th:href="@{|?page=${paging.totalPages -1}|}">Last<i
+                        class="bi bi-chevron-double-right"></i></a>
             </li>
         </ul>
     </nav>
