mod order first-process start

--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -283,7 +283,12 @@
             });
         }
 
-        window.addEventListener("DOMContentLoaded", connectWebSocket);
+        //window.addEventListener("DOMContentLoaded", connectWebSocket);
+        window.addEventListener("DOMContentLoaded", function () {
+            connectWebSocket();
+            /* alert 처리 */
+            [[${errorMessage != null}]] ? alert([[${errorMessage}]]) : null;
+        });
     </script>
 </div>
 </html>
