--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,13 @@
 <!--스크립트 영역-->
 <script th:src="@{/js/bootstrap.bundle.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<th:block layout:fragment="scripts"></th:block>
+<div layout:fragment="scripts">
+    <script th:inline="javascript">
+        window.addEventListener("DOMContentLoaded", function () {
+            /* alert 처리 */
+            [[${errorMessage != null}]] ? alert([[${errorMessage}]]) : null;
+        });
+    </script>
+</div>
 </body>
 </html>
